<resources>
    <string name="app_name">Canteen.Kh</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sing_in_with_google">Sing in with Google</string>
    <string name="send_email">Send email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="price">price</string>
    <string name="title">title</string>
    <string name="create_order">Create order</string>
    <string name="increase_count">Increase count of dish</string>
    <string name="decrease_count">Decrease count of dish</string>
    <string name="send_order">Send order</string>
    <string name="cancel">Cancel</string>
    <string name="total_price_is">Total price is:</string>
    <string name="_0">0</string>
    <string name="pay_by">Pay by:</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="add_some_food">You should add some food!</string>
    <string name="choose_payment_method">Choose payment method, please!</string>
    <string name="can_not_increase_more">You can\'t increase more</string>
    <string name="can_not_decrease_more">You can\'t decrease more</string>
    <string name="your_order">Your order:</string>
    <string name="order_status">Order status:</string>
    <string name="exit">Exit</string>
    <string name="second_press_to_exit">Press back again to exit</string>
</resources>