package com.example.fbtesting

const val AUTHORIZATION_CONTENT_TAG = "authorization_content_tag"
const val SIGN_IN_SCREEN_STATELESS_TAG = "sign_in_screen_stateless_tag"
const val MENU_LIST_TAG = "menu_list_tag"
const val EDIT_RADIO_CARD_TAG = "radio_card_tag"
const val EDIT_RADIO_CASH_TAG = "radio_cash_tag"
const val EDIT_LIST_TAG = "summary_list_tag"


const val HINT_ENTER_EMAIL = "Enter your email"
const val HINT_ENTER_PASS = "Enter your password"
const val PAY_BY_CASH = "cash"
const val PAY_BY_CARD = "card"
const val ORDER_COOKING = "We're cooking your order # "
const val ORDER_STATUS_FALSE = "false"
const val ORDER_READY = "Your order is ready! Your number is: "
const val ORDER_STATUS_TRUE = "true "
const val MAX_COUNT_DISH = 12
const val MIN_COUNT_DISH = 0

const val INVALID_ORDER = "Invalid order"


const val TAG = "TAG"